--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
+        "axios": "^1.6.8",
         "chart.js": "3.3.2",
+        "dotenv": "^16.4.5",
+        "js-cookie": "^3.0.5",
+        "keycloak-js": "^24.0.2",
+        "moment": "^2.30.1",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "3.49.1",
         "vue": "^3.2.41",
-        "vue-router": "^4.1.5"
+        "vue-captcha": "^1.0.2",
+        "vue-router": "^4.1.5",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
